<resources>
    <string name="app_name">TheBlackList</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Login</string>
    <string name="text_not_member">Don\'t have an account? Register.</string>
    <string name="error_message_email">Please enter a valid email.</string>
    <string name="error_message_password">Enter your password.</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter a name.</string>
    <string name="error_password_match">Enter matching passwords.</string>
    <string name="success_message">Account Registered!</string>
    <string name="error_email_exists">This email is already in use.</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="error_valid_email_password">Invalid Password.</string>

    <string name="location_list">List Locations</string>
    <string name="user_list">List Users</string>
    <string name="new_arrest">Make an Arrest</string>
    <string name="search_arrests">Search Arrests</string>
    <string name="emergency">Emergency</string>
    <string name="add_shift_button">Add Shift</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu_drawer_header">Menu Drawer Header</string>
    <string name="view_shifts">View Shifts</string>
    <string name="new_location">New Location</string>
    <string name="assign_shifts">Assign Shifts</string>
    <string name="add_shift">Add Shift</string>
    <string name="make_arrest">Make Arrest</string>
    <string name="my_shifts_button_text">My Shifts</string>
    <string name="my_arrests_button_text">My Arrests</string>

    <string name="good_morning_text">Good morning,</string>
    <string name="good_afternoon_text">Good Afternoon,</string>
    <string name="good_evening_text">Good Evening,</string>
    <string name="title_activity_extra_description">ExtraDescriptionActivity</string>
    <string name="enter_arrest_name">Enter Name or Alias...</string>
    <string name="enter_arrest_height">Enter Height...</string>
    <string name="enter_arrest_weight">Enter Weight...</string>
    <string name="enter_arrest_hair_color">Enter Hair Color...</string>
    <string name="enter_arrest_hair_style">Enter Hair Style...</string>
    <string name="enter_arrest_eye_color">Enter Eye Color...</string>
    <string name="enter_arrest_skin_color">Enter Skin Color...</string>
</resources>
