<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="suplex.theblacklist.user.newArrest.BasicDescriptionActivity">

    <EditText
        android:id="@+id/edit_arrest_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_arrest_name"/>

    <EditText
        android:id="@+id/edit_arrest_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_arrest_height"/>

    <EditText
        android:id="@+id/edit_arrest_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_arrest_weight"/>

    <EditText
        android:id="@+id/edit_arrest_hair_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_arrest_hair_color"/>

    <EditText
        android:id="@+id/edit_arrest_hair_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_arrest_hair_style"/>

    <EditText
        android:id="@+id/edit_arrest_eye_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_arrest_eye_color"/>

    <EditText
        android:id="@+id/edit_arrest_skin_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_arrest_skin_color"/>

</LinearLayout>
